# web-renderer

./: .gitignore  Dockerfile  README.md  default.env  pyproject.toml  run.py
src/web_renderer/: config.py  logger.py
src/web_renderer/api/: app.py
src/web_renderer/api/routes/: __init__.py  browser.py  render.py  whatsapp.py
src/web_renderer/clients/: browser.py  renderer.py  whatsapp.py
src/web_renderer/schemas/: __init__.py  requests.py  responses.py
src/web_renderer/schemas/constants/: page_action_type.py
src/web_renderer/tests/: conftest.py  pytest.ini
src/web_renderer/tests/clients_tests/: test_browser.py  test_renderer.py
src/web_renderer/tests/utils_tests/: test_datetime.py  test_file_system.py
src/web_renderer/utils/: datetime.py  file_system.py
