[tool.black]
line-length = 100

[tool.poetry]
name = "web-renderer"
version = "0.1.0"
description = "Serving rendering functionality using a headless browser"
authors = ["Amit Nakash"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.2"
loguru = "0.6.0"
Jinja2 = "3.1.2"
fastapi = "0.103.2"
black = "23.10.0"
pydantic = "1.10.6"
pyppeteer = "1.0.2"
python-dotenv = "1.0.0"
httpx = "0.25.1"
pytest-httpx = "0.26.0"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"
uvicorn = "0.23.2"
cachetools = "5.3.3"

[tool.poetry.scripts]
start = "web_renderer.run"
test = "pytest"

[build-system]
requires = ["poetry-core"]